|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-05-31 Malte Geierhos
	- GUI 
		* Fixed #334: Reseller cannot confirm / add ordered domains 
		* Fixed #333: upload of logo not possible (thx Sawoy)
		* Fixed #332: Keylength for pma-blowfish secret fixed to be below 256bit 

2007-05-30 Raphael Geissert
	- GUI
		* Fixed #303: Assigning more than 999 ftp/email/etc accounts is not possible
	- SETUP/GUI
		* PMA's blowfish key is now randomly generated at install-time

2007-05-30 Benedikt Heintel
	- GUI
		* fixed #327: some old VHCS stuff found

2007-05-29 Raphael Geissert
	- CONFIGS
		* Fixed #300: Disabling PHP with FastCGI has no effect
		* Added support for mod_php5
	- GUI
		* Fixed #301: Missing % after the numbers in sysinfo.php
		* Fixed #299: Reseller/Admin custom logo can't be removed
		* Fixed non-jpg logo images being renamed to .jpg
	- SETUP
		* Fixed #298: Wrong /etc/hosts file being generated (thanks to sawoy)
		* /etc/resolv.conf isn't replaced, nameservers are only prepended
		* Added creation of backups of /etc/hosts and /etc/resolv.conf

2007-05-28 Raphael Geissert
	- GUI
		* Fixed #313: typo in gui/include/sql.php
		* Fixed #324: typo in gui/client/update_hp.php
	- SETUP
		* Fixed #278: using get*nam() with UID/GID instead user/group names

2007-05-24 Raphael Geissert
	- GUI
		* Fixed #287: choosing DIR not working when adding a new ftp-user
	- SETUP
		* Fixed #308: variable declaration during the setup

2007-05-20 Benedikt Heintel
	- DISTRIBUTIONS:
		* added freeBSD
	- ENGINE:
		* fixed #297: wrong named awstats.ispcp_tpl.conf in domain manager

2007-05-19 Raphael Geissert
	- GUI
		* Fixed #286: login after session timed out gives message
		* Added pending patches from my first submission
		* Fixed #290: upload folder for pma is wrong

2007-05-19 Benedikt Heintel
	- SETUP