@@ -20,13 +20,13 @@ LogFormat "%B" traff
 # AWStats
 #
 
-Alias /awstatsclasses "/srv/www/awstats/classes/"
-Alias /awstatscss "/srv/www/awstats/css/"
-Alias /awstatsicons "/srv/www/awstats/icon/"
-Alias /awstatsjs "/srv/www/awstats/js/"
-Alias /stats "/usr/lib/cgi-bin/awstats/"
+Alias /awstatsclasses "/usr/share/awstats/wwwroot/classes/"
+Alias /awstatscss "/usr/share/awstats/wwwroot/css/"
+Alias /awstatsicons "/usr/share/awstats/wwwroot/icon/"
+Alias /awstatsjs "/usr/share/awstats/wwwroot/js/"
+Alias /stats "/usr/share/awstats/wwwroot/cgi-bin/"
 
-<Directory /usr/lib/cgi-bin/awstats>
+<Directory /usr/share/awstats/cgi-bin>
     AllowOverride AuthConfig
     Options -Includes FollowSymLinks +ExecCGI MultiViews
     AddHandler cgi-script cgi pl
