@@ -1,5 +1,5 @@
 zone "{DMN_NAME}" {
 	type	master;
-	file	"{DMN_NAME}.db";
+	file	data/"{DMN_NAME}.db";
 	notify	YES;
 };
